# anti-entropy

./: .gitignore  BUILD  Dockerfile  LICENSE  MODULE.bazel  README.md  WORKSPACE  docker-compose.yml  go.mod  test_merkle.sh
.githooks/: README.md  pre-commit
.github/workflows/: build.yml
src/anti_entropy/: BUILD  main.go
src/anti_entropy/client/: BUILD  client.go  client_test.go
src/anti_entropy/merkle/: BUILD  merkle.go  merkle_node.go  merkle_test.go  merkle_tree.go
src/anti_entropy/node/: BUILD  node.go  node_test.go
